# blive-qq-forward

./: .gitignore  README.md  pyproject.toml
src/blive_qq_forward/: __main__.py  blive.py  config.yaml.example  myclient.py  push_client.py  settings.py
