[tool.poetry]
name = "blive-qq-forward"
version = "0.1.0"
description = "BLive -> QQ channels forwarder"
authors = ["poly000 <1348292515a@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
blivedm = { git = "git+ssh://git@github.com/mokurin000/blivedm.git", branch = "poetry-package" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
